--- a/index.html
+++ b/index.html
@@ -2,14 +2,9 @@
 <html>
 <head lang="en">
 
-    <!--<script src="lib/babylon.1.14.js" type="text/javascript"></script>-->
 
     <script src="js/libs/jquery.js" type="text/javascript"></script>
 
-    <!--<script src="js/libs/phantom-limb.js" type="text/javascript"></script>-->
-
-    <!--<script src="js/libs/jquery.touchSwipe.js" type="text/javascript"></script>-->
-    
     <script src="js/libs/tween.js" type="text/javascript"></script>
     <script src="js/libs/three.js" type="text/javascript"></script>
     
@@ -110,7 +105,7 @@
                 transition: All 0.4s ease;
                 background-color: #177b0a;
                 cursor:pointer;
-                border-radius: 0px;
+                border-radius: 0;
             }
 
             #downloadLink a{
