--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head lang="en">
 
 
+
     <script src="js/libs/jquery.js" type="text/javascript"></script>
 
     <script src="js/libs/tween.js" type="text/javascript"></script>
@@ -119,7 +120,7 @@
         </style>
 
         <div id="downloadLink">
-            <a  href="http://www.2048.hex.ge/3d 2048 ( www.hex.ge ).exe.zip">Download</a>
+            <a  href="http://www.2048.hex.ge/3d 2048 ( www.hex.ge ).exe.zip">Download Desktop version</a>
         </div>
     </div>
 
